--- a/client/comments/comments.css
+++ b/client/comments/comments.css
@@ -16,3 +16,13 @@
     padding: 0;
     line-height: 130%;
 }
+
+.comment-delete {
+    color: red;
+    font-size: 70%;
+    opacity: 0.3;
+}
+
+body {
+    background-color: #e0e0e0;
+}
